# AI-Content-Store-Hackathon

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
content_store_hackathon/: __init__.py  dataset.py  features.py  plots.py
content_store_hackathon/modeling/: predict.py  train.py
notebooks/: hackathon_demo.ipynb  markscheme_to_json.py
notebooks/data/: markscheme_KS2_labelled.json
