[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "content_store_hackathon"
version = "0.0.1"
description = "A repo for the problem statement 'Providing targeted feedbackn line with best practice', created during Faculty's AI Content Store Hackathon 2 by Team 6"
authors = [
  { name = "Team 6" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["content_store_hackathon"]
include = ["pyproject.toml", "content_store_hackathon/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["content_store_hackathon"]
force-sort-within-sections = true

